Quorum/Library/Tests/TypeChecker/Pass/ExpAssignNumObjUndefined.quorum
class Main
    action Main
        Number num
        num = cast(Number, undefined)
        if num = undefined
            output "passed"
        end
    end
end