Quorum/Library/Tests/TypeChecker/Fail/ExpAssignNumObjTextField.quorum
class main
    Number num
    action Main
        num = cast(Number, "text")
    end
end